# fedra

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  agents.md  build.rs  claude.md  fedra.iss.in  minisign.pub
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
doc/: pandoc.yaml  readme.md
src/: accounts.rs  auth.rs  commands.rs  config.rs  dialogs.rs  error.rs  expiration.rs  html.rs  live_region.rs  main.rs  mastodon.rs  network.rs  notifications.rs  responses.rs  speech.rs  streaming.rs  template.rs  text.rs  timeline.rs  ui.rs  ui_wake.rs  update.rs
src/ui/: app_shell.rs  dialogs.rs  ids.rs  menu.rs  mod.rs  timeline_list.rs  timeline_panel.rs  timeline_view.rs  update_check.rs  window.rs
src/ui/dialogs/: accounts.rs  auth.rs  common.rs  compose.rs  filters.rs  find.rs  follow_list.rs  link_selection.rs  list_edit.rs  list_selection.rs  lists.rs  manage_list_members.rs  manage_lists.rs  media_player.rs  options.rs  post_view.rs  profile.rs  profile_edit.rs  update.rs  user_actions.rs
xtask/: Cargo.toml
xtask/src/: main.rs
