[package]
name = "fedra"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["xtask"]

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
chrono-humanize = "0.2.3"
ego-tree = "0.11.0"
reqwest = { version = "0.13.1", features = ["blocking", "form", "json", "multipart", "rustls"] }
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tungstenite = { version = "0.28.0", features = ["rustls-tls-native-roots"] }
url = "2.5.8"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_System_Com", "Win32_System_Ole", "Win32_System_Threading", "Win32_System_Variant", "Win32_UI_Accessibility", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
wxdragon = { git = "https://github.com/aryanchoudharypro/wxDragon", branch = "main" }

[build-dependencies]
embed-manifest = "1.5.0"
winres = "0.1.12"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1
