[package]
name = "fedra"
version = "0.4.0"
edition = "2024"
rust-version = "1.88.0"

[workspace]
members = ["xtask"]

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", default-features = false, features = ["clock", "std"] }
chrono-humanize = "0.2.3"
clearurls = "0.0.4"
ego-tree = "0.11.0"
minijinja = { version = "2.20.0", default-features = false, features = ["macros", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "stream", "json", "multipart", "rustls-tls"] }
ship-shape = { version = "0.1.3", features = ["ui"] }
scraper = { version = "0.27.0", default-features = false, features = ["errors"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
url = "2.5.8"
wx-utils = "0.1.1"
wxdragon = { version = "0.9.16", features = ["media-ctrl", "webview"] }
accesskit = "0.24.0"

[target.'cfg(windows)'.dependencies]
accesskit_windows = "0.33.0"
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_Ole", "Win32_System_Threading", "Win32_System_Variant", "Win32_UI_Accessibility", "Win32_UI_Controls", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell"] }

[build-dependencies]
embed-manifest = "1.5.0"
winres = "0.1.12"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
codegen-units = 1

[patch.crates-io]
wxdragon = { git = "https://github.com/AllenDang/wxDragon" }
